# LGCNS-5G-AI-RAN-PLATFORM

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  .ruff.toml  ATTRIBUTION.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  mypy.ini
docs/: CMakeLists.txt  acknowledgements.rst  conf.py  index.rst  pyproject.toml
docs/_static/: custom.css
docs/api/: index.rst
docs/api/framework/: index.rst  log.rst  memory.rst  net.rst  pipeline.rst  task.rst  tensor.rst  tensorrt.rst  utils.rst
docs/api/ran/: index.rst
docs/api/ran/py/: constants.rst  datasets.rst  index.rst  mlir_trt_wrapper.rst  ran_utils.rst  trt_plugins.rst  types.rst
docs/api/ran/runtime/: aerial_tv.rst  common.rst  driver.rst  fapi.rst  fronthaul.rst  index.rst  ldpc.rst  message_adapter.rst  oran.rst  phy_ran_app.rst  pusch.rst
docs/developer_guide/: build.rst  ci_pipeline.rst  container.rst  cpp.rst  documentation.rst  index.rst  python.rst  real_time_apps.rst  test.rst  troubleshooting.rst
docs/developer_guide/dependencies/: index.rst
docs/figures/src/: ai_tukey_filter_architecture.drawio.xml  comms_phy_ran_app.drawio.xml  fronthaul_dataflow.drawio.xml  fronthaul_task_timeline.drawio.xml  how_works.drawio.xml  phy_app_container.drawio.xml  phy_ran_app_flow.mermaid  pipeline_cuda_graph.mermaid  pipeline_memory_management.mermaid  pipeline_module.drawio.xml  pusch_inner_receiver_phy_jax.drawio.xml  pusch_inner_receiver_phy_v2.drawio.xml  pusch_pipeline.drawio.xml  real_world_deployment_arch.drawio.xml  scope_venn.drawio.xml  simple_pusch_rx.drawio.xml  workflow.drawio.xml
docs/installation/: docker_and_nvidia_setup.rst  index.rst
docs/overview/: index.rst
docs/src/framework_docs/: __init__.py
docs/tutorials/: CMakeLists.txt  conftest.py  index.rst  test_notebooks.py
docs/tutorials/src/: ai_tukey_filter_training_tutorial.py  ai_tukey_filter_training_tutorial_cdl_params.yaml  ai_tukey_filter_training_tutorial_model_config.yaml  fronthaul_tutorial.py  getting_started.py  mlir_trt_tutorial.py  phy_ran_app_tutorial.py  pipeline_tutorial.py  pusch_channel_estimation_lowering_tutorial.py  pusch_channel_estimation_lowering_tutorial_cdl_params.yaml  pusch_receiver_lowering_tutorial.py  pusch_receiver_tutorial.py  tutorial_utils.py
framework/log/lib/: CMakeLists.txt
framework/log/lib/src/: rt_log.cpp
framework/log/samples/: CMakeLists.txt  rt_log_sample.cpp
framework/log/tests/: CMakeLists.txt  rt_log_custom_tests.cpp  rt_log_sample_tests.cpp  rt_log_samples_tests.cpp  rt_log_tests.cpp  temp_file.cpp  temp_file.hpp
framework/memory/: CMakeLists.txt
framework/memory/include/memory/: buffer.hpp  device_allocators.hpp  gdrcopy_buffer.hpp  memcpy_helper.hpp  monotonic_alloc.hpp  unique_ptr_utils.hpp
framework/memory/tests/: CMakeLists.txt  buffer_test.cpp  device_allocators_test.cpp  gdrcopy_buffer_test.cpp  memcpy_helper_test.cpp  memory_sample_tests.cpp  monotonic_alloc_test.cpp  unique_ptr_utils_test.cpp
framework/net/lib/: CMakeLists.txt
framework/net/lib/src/: doca_rxq.cpp  doca_txq.cpp  doca_utils.cpp  dpdk_txq.cpp  dpdk_utils.cpp  env.cpp  gpu.cpp  mempool.cpp  nic.cpp
framework/net/samples/: CMakeLists.txt  gpunetio_kernels.cu  gpunetio_kernels.hpp  net_receiver.cpp  net_samples.cpp  net_samples.hpp  net_sender.cpp
framework/net/tests/: CMakeLists.txt  doca_utils_tests.cpp  dpdk_utils_tests.cpp  log_test_env.cpp  net_cpu_only_tests.cpp  net_env_tests.cpp  net_sample_tests.cpp  net_test_helpers.cpp  net_test_helpers.hpp  utils_test_env.cpp
framework/pipeline/: CMakeLists.txt
framework/pipeline/include/pipeline/: dynamic_kernel_launch_config.hpp  graph.hpp  graph_manager.hpp  iallocation_info_provider.hpp  igraph.hpp  igraph_manager.hpp  igraph_node_provider.hpp  ikernel_launch_config.hpp  imodule.hpp  imodule_factory.hpp  (+15 more)
framework/pipeline/samples/: CMakeLists.txt
framework/pipeline/src/: dynamic_kernel_launch_config.cpp  graph.cpp  graph_manager.cpp  kernel_descriptor_accessor.cpp  kernel_node_helper.cpp  module_factory.cpp  module_router.cpp  pipeline_factory.cpp  pipeline_memory_manager.cpp  stream_executor.cpp  stream_executor_factory.cpp
framework/pipeline/tests/: CMakeLists.txt  kernel_descriptor_accessor_test.cpp  kernel_launch_config_test.cpp  module_factory_test.cpp  pipeline_sample_tests.cpp  pipeline_test.cpp
framework/task/: CMakeLists.txt
framework/task/lib/: CMakeLists.txt
framework/task/samples/: CMakeLists.txt  task_sample.cpp
framework/task/tests/: CMakeLists.txt  bounded_queue_tests.cpp  flat_map_tests.cpp  function_cache_tests.cpp  instrumented_functions.cpp  instrumented_functions.hpp  log_env.cpp  memory_trigger_tests.cpp  nvtx_tests.cpp  spinlock_tests.cpp  task_category_tests.cpp  task_graph_tests.cpp  task_monitor_tests.cpp  task_pool_tests.cpp  task_sample_tests.cpp  task_scheduler_tests.cpp  task_tests.cpp  task_utils_tests.cpp  task_visualizer_tests.cpp  task_worker_tests.cpp  time_tests.cpp  timed_trigger_tests.cpp
framework/task/tools/: CMakeLists.txt  pyproject.toml
framework/tensor/: CMakeLists.txt
framework/tensor/src/: data_types.cpp  tensor_arena.cpp  tensor_info.cpp
framework/tensor/tests/: CMakeLists.txt  tensor_sample_tests.cpp
framework/tensorrt/: CMakeLists.txt
framework/tensorrt/src/: mlir_trt_engine.cpp  trt_engine.cpp  trt_engine_logger.cpp  trt_pre_post_enqueue_stream_cap.cpp
framework/tensorrt/tests/: CMakeLists.txt  mlir_add_kernel_engine_test.cpp  mlir_trt_engine_test.cpp  tensorrt_sample_tests.cpp
framework/utils/: CMakeLists.txt
framework/utils/src/: cuda_stream.cpp
framework/utils/tests/: CMakeLists.txt  arr_cuda_test.cu  arr_test.cpp  errors_test.cpp  exceptions_test.cpp  kernel_test_dummy.cu  kernel_test_dummy.cuh  test_logging_setup.cpp  utils_sample_tests.cpp
ran/py/: .gitattributes  CMakeLists.txt  pyproject.toml
ran/py/test_vectors/: __init__.py  _tv_utils.py
ran/py/tests/: __init__.py  conftest.py
ran/runtime/common/: CMakeLists.txt  ran_common.hpp
ran/runtime/driver/: CMakeLists.txt
ran/runtime/fronthaul/: CMakeLists.txt
(+538 files in other folders)
